@@ -1,3 +1,6 @@
+2021-08-14 Alexander Malysh <amalysh @ kannel.org>
+    * gwlib/cfg.c: fixed config parsing error log
+
 2021-08-09 Alexander Malysh <amalysh @ kannel.org>
     * gw/bb_smscconn.c: fixed memleak & double conn creation for add-smsc
 
